syntax = "proto3";

option go_package = "/proto";

package quiz;

service QuizService {
    rpc GetQuestions(GetQuestionsRequest) returns (GetQuestionsResponse) {}
    rpc RegisterAnswers(RegisterAnswersRequest) returns (RegisterAnswersResponse) {}
}

message GetQuestionsRequest {}

message GetQuestionsResponse {
    string quizTitle = 1;
    repeated Question questions = 2;
}

message Question {
    int32 id = 1;
    string text = 3;
    repeated Option options = 4;
}

message Option {
    string id = 1;
    string text = 3;
}

message Answer {
    int32 questionId = 1;
    string chosenOptionId = 2;
}

message RegisterAnswersRequest {
    repeated Answer answers = 1;
}

message RegisterAnswersResponse {
    float score = 1;
    repeated QuestionResult quesitonsResults = 2;
    Statistics statistics = 3;
}

message QuestionResult {
    int32 questionId = 1;
    string chosenOptionId = 2;
    string correctOptionId = 3;
    bool isCorrect = 4;
}

message Statistics {
    float betterThan = 1;
}
